--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html,body{
     font-family: 'Caveat', cursive;
+    font-size: 1.6rem;
     margin: 50px;
     background-image: url(https://images.unsplash.com/photo-1543497415-75c0a27177c0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8OXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60);
     background-attachment: fixed;
